fix: cut off categories section header in browse popup
This commit removes the arbitrary width in the browse popup
to allow the content to not get cut off.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -976,7 +976,6 @@ body
 .cooked-recipe-search
     .cooked-fields-wrap.cooked-1-search-fields
     .cooked-browse-select-block {
-    width: 170%;
     padding: 1.5rem;
 }
 .cooked-recipe-search
